@@ -329,7 +329,7 @@ var possibleReaderTypes = utils.NewStringSet([]string{utils.MetaFileCSV,
 
 var possibleExporterTypes = utils.NewStringSet([]string{utils.MetaFileCSV, utils.META_NONE, utils.MetaFileFWV,
 	utils.MetaHTTPPost, utils.MetaHTTPjsonMap, utils.MetaAMQPjsonMap, utils.MetaAMQPV1jsonMap, utils.MetaSQSjsonMap,
-	utils.MetaKafkajsonMap, utils.MetaS3jsonMap, utils.MetaVirt})
+	utils.MetaKafkajsonMap, utils.MetaS3jsonMap, utils.MetaElastic, utils.MetaVirt})
 
 func (cfg *CGRConfig) LazySanityCheck() {
 	for _, expID := range cfg.cdrsCfg.OnlineCDRExports {
